content/nginx-plus-ingress/basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  tls:
  - hosts:
    - app.example.com
    secretName: app-secret
  rules:
  - host: app.example.com
    http:
      paths:
      - path: /bar
        backend:
          serviceName: bar-svc
          servicePort: 80
      - path: /foo
        backend:
          serviceName: foo-svc
          servicePort: 80
